--- a/mapaviajero-api/.env.example
+++ b/mapaviajero-api/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://your-domain.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,17 +22,18 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=traveller_api
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=your_database_name
+DB_USERNAME=your_database_user
+DB_PASSWORD=your_database_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+# SESSION_DOMAIN=your-domain.com
+# SANCTUM_STATEFUL_DOMAINS=localhost:5173
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
