--- a/mapaviajero-api/composer.json
+++ b/mapaviajero-api/composer.json
@@ -11,8 +11,7 @@
         "doctrine/annotations": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.2",
-        "laravel/tinker": "^2.9",
-        "mongodb/laravel-mongodb": "^5.4"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
